force-app/main/default/objects/Training__c/Training__c.object-meta.xml
<CustomObject>
    <description>A specific training event</description>
    <label>Training</label>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>