force-app/main/default/objects/Training__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The date and time that the training concluded</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>