force-app/main/default/objects/Training__c/fields/Restaurant_Commission_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Commission_Forecast__c</fullName>
    <label>Restaurant Commission Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>