force-app/main/default/objects/Training__c/fields/Trainer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The trainer that will perform the training.</inlineHelpText>
    <label>Trainer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>