force-app/main/default/objects/Training__c/fields/Training_Course__c.field-meta.xml
<CustomField>
    <fullName>Training_Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The course that was delivered in the training</inlineHelpText>
    <label>Training Course</label>
    <referenceTo>Training_Course__c</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>