force-app/main/default/objects/Training__c/fields/Training_Length_Days__c.field-meta.xml
<CustomField>
    <fullName>Training_Length_Days__c</fullName>
    <formula>DATEVALUE(End_Date__c) - DATEVALUE(Start_Date__c)</formula>
    <inlineHelpText>The duration of the training in terms of days</inlineHelpText>
    <label>Training Length (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>